# opengl-cube

./: .clang-format  .gitignore  CMakeLists.txt  README.md
shaders/: fragment.glsl  vertex.glsl
src/: input.c  input.h  main.c  main.cpp  read_shader.c  read_shader.h  rotation.c  rotation.h  shader.c  shader.cpp  shader.h  shader.hpp  transforms.c  transforms.h
